# spring-initializr-cli

./: Cargo.toml  README.md
.github/workflows/: cargo-publish.yml  publish.yml
src/: main.rs
targets/linux/: spring-initializr-cli
