[package]
name = "spring-initializr-cli"
description = "Command-line tool to quickly and easily create new Spring Boot projects"
repository = "https://github.com/AlbertLnz/spring-initializr-cli"
version = "0.1.1"
edition = "2021"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["cli", "spring", "framework", "java"]
license = "MIT OR Apache-2.0"
rust-version = "1.82.0"

[dependencies]
colored = "2.1.0"
dialoguer = "0.11.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
